<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contact Grid</string>
    <string name="pref_category_layout">Layout</string>
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_numrows">Number of Rows</string>
    <string name="pref_numcols">Number of Columns</string>
    <string name="pref_showmessages">Show Messages</string>
    <string name="pref_actionshortcuts">Use Action Shortcuts</string>
    <string name="label_selectgroup">Select a Group</string>
	<string name="label_groupmembers">Group members</string>
	<string name="btnEmailGroup">Email Selected</string>
	<string name="btnTextGroup">Text Selected</string>
	<string name="btnSelectAll">Select All</string>
	<string name="menu_lbl_contacts">Contacts</string>
	<string name="menu_lbl_preferences">Preferences</string>
</resources>
