<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_groupmembers"
        android:textAppearance="?android:attr/textAppearanceLarge" />
		
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
			<Button
				android:text="@string/btnEmailGroup"
				android:id="@+id/btnEmailGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
			<Button
				android:text="@string/btnTextGroup"
				android:id="@+id/btnTextGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
	</LinearLayout>
	
	<ListView android:id="@+id/lstGroupMembers"
		android:layout_width = "fill_parent"
		android:layout_height="fill_parent" />
	
</LinearLayout>
    
